src/css/chats.css
*,
*:before,
*:after {
  box-sizing: inherit;
}

html {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  padding: 0;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.user-chats li .mdc-list-item__primary-text {
  font-size: 18px;

}

.user-chats li .mdc-list-item__meta {
  font-size: 1rem;
}

.page {
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.marvel-device {
  width: 100%;
}

.marvel-device .screen {
  text-align: left;
  height: 100%;
}

.screen-container {
  height: 100%;
}

/* Status Bar */

.status-bar {
  height: 25px;
  background: #004e45;
  color: #fff;
  font-size: 14px;
  padding: 0 8px;
}

.status-bar:after {
  content: "";
  display: table;
  clear: both;
}

.status-bar div {
  float: right;
  position: relative;
  top: 50%;
  transform: translateY(-50%);
  margin: 0 0 0 8px;
  font-weight: 600;
}

/* Chat */

.chat {
  height: calc(100% - 69px);
}

.chat-container {
  height: 100%;
}

/* User Bar */

.user-bar {
  height: 55px;
  background: #005e54;
  color: #fff;
  padding: 0 8px;
  font-size: 24px;
  position: relative;
  z-index: 1;
}

.user-bar:after {
  content: "";
  display: table;
  clear: both;
}

.user-bar div {
  float: left;
  transform: translateY(-50%);
  position: relative;
  top: 50%;
}

.user-bar .actions {
  float: right;
  margin: 0 0 0 20px;
}

.user-bar .actions.more {
  margin: 0 12px 0 32px;
}

.user-bar .actions.attachment {
  margin: 0 0 0 30px;
}

.user-bar .actions.attachment i {
  display: block;
  transform: rotate(-45deg);
}

.user-bar .avatar {
  margin: 0 0 0 5px;
  width: 36px;
  height: 36px;
}

.user-bar .avatar img {
  border-radius: 50%;
  box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1);
  display: block;
  width: 100%;
}

.user-bar .name {
  font-size: 17px;
  font-weight: 600;
  text-overflow: ellipsis;
  letter-spacing: 0.3px;
  margin: 0 0 0 8px;
  overflow: hidden;
  white-space: nowrap;
  width: 110px;
}

.user-bar .status {
  display: block;
  font-size: 13px;
  font-weight: 400;
  letter-spacing: 0;
}

/* Conversation */

.conversation {
  /* height: calc(100% - 12px); */
  position: relative;
  background: #efe7dd url("https://cloud.githubusercontent.com/assets/398893/15136779/4e765036-1639-11e6-9201-67e728e86f39.jpg") repeat;
  z-index: 0;
  height: 100vh;
}

.conversation ::-webkit-scrollbar {
  transition: all .5s;
  width: 5px;
  height: 1px;
  z-index: 10;
}

.conversation ::-webkit-scrollbar-track {
  background: transparent;
}

.conversation ::-webkit-scrollbar-thumb {
  background: #b3ada7;
}

.conversation .conversation-container {
  height: calc(100% - 68px);
  box-shadow: inset 0 10px 10px -10px #000000;
  overflow-x: hidden;
  padding: 0 16px;
  margin-bottom: 5px;
  padding-bottom: 10px;
}

.conversation .conversation-container:after {
  content: "";
  display: table;
  clear: both;
}

/* Messages */

.message {
  color: #000;
  clear: both;
  line-height: 18px;
  font-size: 15px;
  padding: 8px;
  position: relative;
  margin: 8px 0;
  max-width: 85%;
  word-wrap: break-word;
  text-decoration: none;

}



.message:after:not(.date) {
  position: absolute;
  content: "";
  width: 0;
  height: 0;
  border-style: solid;
}

.metadata {
  display: inline-block;
  float: right;
  padding: 0 0 0 7px;
  position: relative;
  bottom: -4px;
}

.metadata .time {
  color: rgba(0, 0, 0, .45);
  font-size: 13px;
  display: inline-block;
}

.message.me .metadata .time {
  color: white;
}

.metadata .tick {
  display: inline-block;
  margin-left: 2px;
  position: relative;
  top: 4px;
  height: 16px;
  width: 16px;

}

.metadata .tick i {
  font-size: 15px;
}




.message:first-child {
  margin: 16px 0 8px;
  margin-top: 76px;
}

.message.them {
  background: #fff;
  border-radius: 0px 5px 5px 5px;
  float: left;
}

.message.them .metadata {
  padding: 0 0 0 16px;

}

.message.them .metadata .tick {
  color: black;
}

.message.them:after {
  border-width: 0px 10px 10px 0;
  border-color: transparent #fff transparent transparent;
  top: 0;
  left: -10px;
}

.message.me {
  background: #bd5668;
  border-radius: 5px 0px 5px 5px;
  float: right;
  color: white;
}

.message.me .metadata .tick {
  color: white;
}

.message.me:after {
  border-width: 0px 0 10px 10px;
  border-color: transparent transparent transparent #bd5668;
  top: 0;
  right: -10px;
}

.date-box {
  clear: both;
  font-size: 15px;
  padding: 15px;
  position: relative;
}

.date-box:first-child {
  margin: 16px 0 8px;
  margin-top: 76px;
}

.date-box .date {
  margin: 0px 0;
  max-width: 85%;
  word-wrap: break-word;
  text-decoration: none;
  background-color: rgba(225, 245, 254, .92);
  border-radius: 7.5px;
  box-shadow: 0 1px 0.5px rgba(0, 0, 0, .13);
  padding: 5px 12px 6px;
  text-align: center;
  text-shadow: 0 1px 0 hsla(0, 0%, 100%, .4);
  width: fit-content;
  margin-left: auto;
  margin-right: auto;
}

/* Compose */

.conversation-compose {
  display: flex;
  flex-direction: row;
  align-items: flex-end;
  overflow: hidden;
  height: 50px;
  width: 95%;
  z-index: 2;
  position: fixed;
  bottom: 1rem;
}

.conversation-compose div,
.conversation-compose input {
  background: #fff;
  height: 100%;
}

.conversation-compose .input-space-left {
  display: flex;
  align-items: center;
  justify-content: center;
  background: white;
  border-radius: 5px 0 0 5px;
  flex: 0 0 auto;
  margin-left: 8px;
  width: 20px;
}

.conversation-compose .input-msg {
  border: 0;
  flex: 1 1 auto;
  font-size: 16px;
  margin: 0;
  outline: none;
  min-width: 50px;
}

.conversation-compose .input-space-right {
  flex: 0 0 auto;
  border-radius: 0 0 5px 0;
  text-align: center;
  position: relative;
  width: 20px;
}

.conversation-compose .photo:after {
  border-width: 0px 0 10px 10px;
  border-color: transparent transparent transparent #fff;
  border-style: solid;
  position: absolute;
  width: 0;
  height: 0;
  content: "";
  top: 0;
  right: -10px;
}

.conversation-compose .photo i {
  display: block;
  color: #7d8488;
  font-size: 24px;
  transform: translate(-50%, -50%);
  position: relative;
  top: 50%;
  left: 50%;
}

.conversation-compose .send {
  background: transparent;
  border: 0;
  cursor: pointer;
  flex: 0 0 auto;
  margin-left: 8px;
  margin-right: 8px;
  padding: 0;
  position: relative;
  outline: none;
}

.conversation-compose .send .circle {
  background: var(--mdc-theme-primary);
  border-radius: 50%;
  color: #fff;
  position: relative;
  width: 48px;
  height: 48px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.conversation-compose .send .circle i {
  font-size: 24px;
  margin-left: 5px;
}

/* Small Screens */

@media (max-width: 768px) {
  .marvel-device.nexus5 {
    border-radius: 0;
    flex: none;
    padding: 0;
    max-width: none;
    overflow: hidden;
    height: 100%;
    width: 100%;
  }

  .marvel-device>.screen .chat {
    visibility: visible;
  }

  .marvel-device {
    visibility: hidden;
  }

  .marvel-device .status-bar {
    display: none;
  }

  .screen-container {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
  }

  .conversation {
    /* height: calc(100vh - 55px); */
  }

  .conversation .conversation-container {
    /* height: calc(100vh - 120px); */
  }
}


.chat-count {
  font-size: 16px;

  width: 25px;
  height: 25px;
  border-radius: 50%;
  background-color: var(--mdc-theme-primary);

  text-align: center;
  display: table-cell;
  overflow: hidden;
  vertical-align: middle;
  color: white;
}



.search-field {
  position: fixed;
  top: 0;
  width: 100%;
  background-color: white;
  z-index: 99;
}


#search-users {
  width: 100%;
  background-color: white;
  transition: visibility 0s, opacity 0.5s linear;
}


/** view-form**/
#view-form .mdc-card {
  box-shadow: none;
}

#view-form .mdc-dialog__content {
  padding-left: 0px;
  padding-right: 0px;

}

#view-form .mdc-card .view-card {
  padding: 20px 24px;
  /* max-height: 300px; */
  padding-top: 0px;
  padding-bottom: 0px;

}

#view-form .mdc-card .view-card .mdc-list {
  padding: 0px;
}

#view-form .mdc-card .view-card .mdc-list li {
  padding-left: 0px;
}

#view-form .mdc-card .view-card .mdc-list li .list-text {
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  margin-top: 0;
  line-height: normal;
  display: block;
}

.venue-map-intent {
  text-decoration: none;
}

#attachment-container h1 {
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

#assignee-container #share {

  overflow-y: auto;
}
#assignee-container .tasks-heading {
  width: 100%;
}
#assignee-container .tasks-heading .mdc-chip__text {
  overflow: hidden;
  text-overflow: ellipsis;
}

/** status-change **/

.status-select {
  max-width: 300px;
  min-width: 280px;

}


/** menu **/
.align-right-menu {
  right: 20px;
  left: auto !important;

}

.map-menu-item a {
  text-decoration: none;
  color: #000;

}

/** Share **/
.share-user-container {
  padding: 16px 16px 0px 16px;
}

.share-user-container .mdc-chip-set {
  padding-left: 0px;
  overflow-x: scroll;
  overflow-y: hidden;
  white-space: nowrap;
  display: inline-table;
  width: 100%;
  border-bottom: 1px solid lightgray;
  transition: visibility 0s, opacity 0.5s linear;
}

::-webkit-scrollbar {
  width: 0px;
  background: transparent
}

.share-user-container .mdc-chip-set .mdc-chip {
  margin-left: 0px;
  border: none;
}

#users-list {
  position: fixed;
  height: 100%;
  width: 100%;
  overflow-y: auto;
}

.user-selection-icon {
  position: absolute;
  bottom: 0;
  right: 10px;
  transition: .3s ease;
  color: green;
  visibility: hidden;
  opacity: 0;
  transition: visibility 0s, opacity 0.5s linear;


}

/** share selection **/

.user-selection-icon.user-selection-show {
  opacity: 1;
  visibility: visible;
}

